# Cog-template

./: LICENSE  README.md  main.py  pyproject.toml  readme.MD  requirement.txt
cogs/: ping.py
core/: bot.py
prisma/: schema.prisma
settings/: config.py
src/cogs/: ping.py
src/core/: bot.py
src/utils/: config.py  logger.py
