[tool.poetry]
name = "discord-py-template"
version = "0.0.1"
description = "a discord py template"
authors = ["exril <mail@exril.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.4.0"
jishaku = "^2.5.2"
prisma = "^0.13.1"
logging = "^0.4.9.6"
python-dotenv = "^1.0.1"
colorlog = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
